--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.17.2",
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
     "mysql2": "^2.3.2",
     "nodemon": "^2.0.14",
     "package.json": "^2.0.1",
